--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,25 @@
 h1 {
     font-family: "Tiempos Headline", "Georgia Adjusted", Georgia, serif;
+    text-align: center;
+    color: white;
 }
 
-body {
-    font-family: "Tiempos Text", "Georgia Adjusted", Georgia, serif;
-    margin: 3%;
+h2 {
+    font-family: "Tiempos Headline", "Georgia Adjusted", Georgia, serif;
+    text-align: center;
+    color: white;
+}
 
+header {
+    background-color: black;
+}
+
+#spacer {
+    height: 800px;
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 2.5rem;
@@ -17,4 +27,5 @@ footer {
     text-align: center;
     color: black;
     font-family: "Proxima Nova", sans-serif;
+    background-color: white;
 }
